Switch to a dark color theme

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta charset="utf-8">
     <style>
       body {
+        background: #191414;
+        color: #fafafa;
         margin: 10vh 5vw;
       }
 
       section > p:first-of-type::first-letter {
+        color: #ffc864;
         font-family: 'UnifrakturMaguntia', serif;
         float: left;
         font-size: 18rem;
